# mcp-zoho-inventory

./: Dockerfile  README.md  TODO.md  client.py  pyproject.toml  requirements.txt  syncing.py
.cursor/rules/: example-mcp-code.mdc  package-manager.mdc  sample-code-simple-tool.mdc  sample-code.mdc  sample-get-item-api.mdc
src/mcp_zohoinventory/: __init__.py  auth.py  client.py  items.py  server.py  warehouses.py  zoho_inventory_client.py
